// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[RadioButton Rendering] renders Checked without crashing 1`] = `
<body>
  <div>
    <label
      class="rcx-box rcx-box--full rcx-label  rcx-box rcx-box--full rcx-radio-button"
    >
      <input
        checked=""
        class="rcx-box rcx-box--full rcx-radio-button__input"
        id="decoratorId"
        type="radio"
      />
      <i
        aria-hidden="true"
        class="rcx-box rcx-box--full rcx-radio-button__fake"
      />
    </label>
    <label
      class="rcx-box rcx-box--full rcx-label rcx-css-b7g1a9"
      for="decoratorId"
    >
      Decorator Label
    </label>
  </div>
</body>
`;

exports[`[RadioButton Rendering] renders Default without crashing 1`] = `
<body>
  <div>
    <label
      class="rcx-box rcx-box--full rcx-label  rcx-box rcx-box--full rcx-radio-button"
    >
      <input
        class="rcx-box rcx-box--full rcx-radio-button__input"
        id="decoratorId"
        type="radio"
      />
      <i
        aria-hidden="true"
        class="rcx-box rcx-box--full rcx-radio-button__fake"
      />
    </label>
    <label
      class="rcx-box rcx-box--full rcx-label rcx-css-b7g1a9"
      for="decoratorId"
    >
      Decorator Label
    </label>
  </div>
</body>
`;

exports[`[RadioButton Rendering] renders Disabled without crashing 1`] = `
<body>
  <div>
    <label
      class="rcx-box rcx-box--full rcx-label  rcx-box rcx-box--full rcx-radio-button"
    >
      <input
        class="rcx-box rcx-box--full rcx-radio-button__input"
        disabled=""
        id="decoratorId"
        type="radio"
      />
      <i
        aria-hidden="true"
        class="rcx-box rcx-box--full rcx-radio-button__fake"
      />
    </label>
    <label
      class="rcx-box rcx-box--full rcx-label rcx-css-b7g1a9"
      for="decoratorId"
    >
      Decorator Label
    </label>
  </div>
</body>
`;
